--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2018-2022</span>
     					<h2>Bachelor of Science in Computer Science BS(CS)</h2>
-    					<span class="position">Army Public School</span>
+    					<span class="position">Islamia University Bahawalpur</span>
     				</div>
 				</div>
 
