--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5" target="_blank">Download CV</a></p>
+    				<p><a href="My Resume (1).pdf" class="btn btn-primary py-4 px-5" target="_blank">Download CV</a></p>
     			</div>
     		</div>
     	</div>
