--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a target="_blank" href="#">resume</a></p>
+	            <p><a target="_blank" href="My Resume (1).pdf">resume</a></p>
 	          </div>
           </div>
 
